# lr2

./: CMakeLists.txt  README (1).md  README.md  Отчет_лаба_2.doc
lib_matrix/: CMakeLists (3).txt  CMakeLists.txt  matrix.cpp  matrix.h
tests.matrix/: CMakeLists.txt  test_matrix.cpp
